Added health check controller
